WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257111
[GStreamer] Typo fix in MediaPlayerPrivateGStreamer::handleMessage()
https://bugs.webkit.org/show_bug.cgi?id=257111
Summary
[GStreamer] Typo fix in MediaPlayerPrivateGStreamer::handleMessage()
Zan Dobersek
Reported
2023-05-22 00:46:27 PDT
Build fix.
Attachments
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2023-05-22 00:51:14 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14166
EWS
Comment 2
2023-05-22 01:04:14 PDT
Committed
264317@main
(554289577e26): <
https://commits.webkit.org/264317@main
> Reviewed commits have been landed. Closing PR #14166 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-05-22 01:05:24 PDT
<
rdar://problem/109645777
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug