[GStreamer] Typo fix in MediaPlayerPrivateGStreamer::handleMessage() https://bugs.webkit.org/show_bug.cgi?id=257111

Unreviewed build fix in MediaPlayerPrivateGStreamer::handleMessage(), fixing a
pair of typos in a rare-ish platform block of GST_MESSAGE_STATE_CHANGE handling.

* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::handleMessage):

Canonical link: https://commits.webkit.org/264317@main